Fix: display filters nicely on mobile

--- a/src/sass/_filters.scss
+++ b/src/sass/_filters.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 #filters {
   background: darken(#F9A674, 20%);
   width: 100%;
@@ -9,12 +11,23 @@
     color: #fff;
     font-size: 1.1em;
     font-family: Lora, serif;
+
+    @media #{$small-devices} {
+      width: 90%;
+    }
   }
 
   ul {
     display: inline;
     padding-left: 1em;
     font-family: PT Sans, sans-serif;
+
+    @media #{$small-devices} {
+      display: flex;
+      flex-direction: column;
+      padding-left: 0;
+    }
+
     li {
       display: inline;
       background: darken(#F9A674, 15%);
@@ -24,6 +37,10 @@
       border-radius: .5em;
       padding: .5em 1em;
       margin: .5em;
+      @media #{$small-devices} {
+        padding: .5em;
+        margin: .5em 0;
+      }
       a {
         color: #fff;
       }
